# Cpp_course_23_24

./: .gitignore  README.md
01-HWC-LFU-cache/: CMakeLists.txt  README.md
01-HWC-LFU-cache/Include/: LFU-cache.hpp  perfect-cache.hpp
01-HWC-LFU-cache/Source/: Makefile  cache  cache.cpp
01-HWC-LFU-cache/Test/: Makefile  test  test-data.txt  test.cpp  test_data.txt
01-HWC-cache/: .gitignore
01-HWC-cache/Include/: cache.hpp
01-HWC-cache/Source/: cache  cache.cpp
01-HWC-cache/Test/: Makefile  test  test.cpp  test_data.txt
01-HWC-cache/test/: test.cpp
01-HWC-cache_Vlad/Include/: cache.hpp
01-HWC-cache_Vlad/Source/: cache.cpp
01-HWC-cache_Vlad/Test/: test  test.cpp
02-HW3D/: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
02-HW3D-triangles-intersect/Include/: geometry2d.hpp
02-HW3D/Include/: Geometry2D.hpp  Geometry3D.hpp
02-HW3D/Source/: Geometry2D.cpp  Geometry3D.cpp  triangles.cpp
02-HW3D/Test/: test.cpp  test_2D.cpp  test_3D.cpp  test_data.txt
CMakeTests/Step1/: CMakeLists.txt  main.cpp
